--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
 	    
 const urlParams = new URLSearchParams(window.location.search);
 //const myParam = urlParams.get('myParam');
-	    
-      window.location.replace("http://www.starbase18.com?"&urlParams.toString());
+	    alert(urlParams.toString);
+      window.location.replace("http://www.starbase18.com?"+urlParams.toString());
     </script>
 	</head>
 	<body class="is-preload">
