--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       gtag('js', new Date());
       gtag('config', 'G-B2P81665F3');
 
-      
+      //redirect
       window.location.replace("http://www.starbase18.com/" + window.location.search.replace('?',''));
       
      </script><link href=js/about.c6a830fb.js rel=prefetch><link href=css/app.0d335622.css rel=preload as=style><link href=css/chunk-vendors.80d8a5b6.css rel=preload as=style><link href=js/app.44af82a4.js rel=preload as=script><link href=js/chunk-vendors.000b990b.js rel=preload as=script><link href=css/chunk-vendors.80d8a5b6.css rel=stylesheet><link href=css/app.0d335622.css rel=stylesheet></head><body class=is-preload><noscript><strong>We're sorry but this website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><footer id=footer style=text-align:center;clear:both;><p class="copyright notranslate">&copy; noSpoon Media</p></footer><script src=assets/js/jquery.min.js></script><script src=assets/js/browser.min.js></script><script src=assets/js/breakpoints.min.js></script><script src=assets/js/util.js></script><script src=https://static.airtable.com/js/embed/embed_snippet_v1.js></script><script>function googleTranslateElementInit() {
